feat: update place id of material possession

--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -208,6 +208,7 @@
         "title": "Editar bem | Número: {number}",
         "labels": {
           "description": "Descrição",
+          "place": "Local",
           "brandName": "Marca",
           "templateName": "Modelo",
           "dateOfAquisition": "Data de aquisição",
